# VibeMouse

./: README.md  README.zh-CN.md  pyproject.toml
docs/: AI_ASSISTANT_DEPLOYMENT.md  AI_ASSISTANT_DEPLOYMENT.zh-CN.md  AI_DEBUG_RUNBOOK.md
openclaw-stt-plugin/: index.js  install_local.sh  openclaw.plugin.json  package.json  requirements.txt  stt_cli.py
scripts/: auto-deploy.sh
tests/: test_app.py  test_config.py  test_deploy.py  test_doctor.py  test_keyboard_listener.py  test_main.py  test_mouse_listener.py  test_system_integration.py
vibemouse/: app.py  audio.py  config.py  deploy.py  doctor.py  keyboard_listener.py  logging_setup.py  main.py  mouse_listener.py  system_integration.py  transcriber.py
